--- a/bundle.yml
+++ b/bundle.yml
@@ -64,6 +64,7 @@ options :
         cmake : >
             ENABLE_CUDA=ON
             ENABLE_CLOUDSC_GPU_SCC_CUF=ON
+            ENABLE_CLOUDSC_CUDA=ON
 
     - with-mpi :
         help  : Enable MPI-parallel kernel
