--- a/bundle.yml
+++ b/bundle.yml
@@ -100,6 +100,10 @@ options :
         help  : Build the new Fortran version of CLOUDSC [ON|OFF]
         cmake : ENABLE_CLOUDSC_FORTRAN={{value}}
 
+    - cloudsc-fortran-pyiface :
+        help  : Build the Python driver interfaced with the new Fortran version of CLOUDSC [ON|OFF]
+        cmake : ENABLE_CLOUDSC_FORTRAN_PYIFACE={{value}}
+
     - cloudsc-c :
         help  : Build the C version of CLOUDSC [ON|OFF]
         cmake : ENABLE_CLOUDSC_C={{value}}
@@ -130,6 +134,11 @@ options :
             ENABLE_HDF5=OFF
             ENABLE_SERIALBOX=ON
             BUILD_serialbox=ON
+
+    - with-f90wrapf2py :
+        help  : Enable f90wrap/f2py execution to build library for Python CLOUDSC driver 
+        cmake : >
+            ENABLE_F90WRAPF2PY=ON
 
     - serialbox-experimental :
         help  : Enable Serialbox experimental filesystem [ON|OFF]
