--- a/src/cloudsc_gpu/CMakeLists.txt
+++ b/src/cloudsc_gpu/CMakeLists.txt
@@ -140,8 +140,11 @@ if( HAVE_CLOUDSC_GPU_OMP_SCC_HOIST )
             cloudsc_driver_gpu_omp_scc_hoist_mod.F90
             cloudsc_gpu_omp_scc_hoist_mod.F90
         LIBS
-            cloudsc-common-lib
-        DEFINITIONS ${CLOUDSC_DEFINITIONS} ${CLOUDSC_GPU_OMP_SCC_HOIST_DEFINITIONS}
+            cloudsc-common-lib-omp-target
+        DEFINITIONS
+            ${CLOUDSC_DEFINITIONS}
+            ${CLOUDSC_GPU_OMP_SCC_HOIST_DEFINITIONS}
+            $<$<BOOL:${HAVE_OMP_TARGET}>:HAVE_OMP_TARGET>
     )
 
     ecbuild_add_test(
