RC2, corrected wrong character in Readme, downgrade of compulsory Python version in cmake  to 3.8 to reenable CI compilation. Pyiface version itself is not tested in CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ if( HAVE_SERIALBOX )
 endif()
 
 ecbuild_find_package( NAME loki )
-ecbuild_find_python(VERSION 3.10 REQUIRED NO_LIBS)
+ecbuild_find_python(VERSION 3.8 NO_LIBS)
 
 if ( PYTHON_EXECUTABLE )
   execute_process(COMMAND ${PYTHON_EXECUTABLE} --version)
