Testing on AMD hardware

--- a/src/cloudsc_hip/CMakeLists.txt
+++ b/src/cloudsc_hip/CMakeLists.txt
@@ -14,11 +14,10 @@ ecbuild_add_option( FEATURE CLOUDSC_CUDA
 
 if( HAVE_CLOUDSC_CUDA )
 
-    set(HIP_PLATFORM "nvidia")
 
     if(NOT DEFINED HIP_PATH)
       if(NOT DEFINED ENV{HIP_PATH})
-        set(HIP_PATH "/home/nams/opt/rocm/hip" CACHE PATH "Path to which HIP has been installed")
+        set(HIP_PATH "/opt/rocm-5.0.2/hip" CACHE PATH "Path to which HIP has been installed")
       else()
         set(HIP_PATH $ENV{HIP_PATH} CACHE PATH "Path to which HIP has been installed")
       endif()
@@ -28,14 +27,15 @@ if( HAVE_CLOUDSC_CUDA )
       if(DEFINED ENV{ROCM_PATH})
         set(ROCM_PATH $ENV{ROCM_PATH} CACHE PATH "Path to which ROCM has been installed")
       else()
-        set(ROCM_PATH "/home/nams/opt/rocm" CACHE PATH "Path to which ROCM has been installed")
+        set(ROCM_PATH "/opt/rocm-5.0.2" CACHE PATH "Path to which ROCM has been installed")
       endif()
     endif()
 
     if ( HAVE_OMP )
       message("found OpenMP for HIP!!")
     else()
-      message( FATAL_ERROR "have NOT found OpenMP for HIP!!")
+      # message( FATAL_ERROR "have NOT found OpenMP for HIP!!")
+      message("have not found OMP for HIP!")
     endif()
 
     set(CMAKE_MODULE_PATH "${HIP_PATH}/cmake" ${CMAKE_MODULE_PATH})
@@ -44,10 +44,6 @@ if( HAVE_CLOUDSC_CUDA )
       "${HIP_PATH}/../lib/cmake" # hopefully catches all extra HIP dependencies
     )
     list(APPEND CMAKE_PREFIX_PATH ${HIP_PATH} ${ROCM_PATH})
-
-    # enable_language(CUDA)
-    # list(APPEND CMAKE_PREFIX_PATH /home/nams/opt/rocm/hip /home/nams/opt/rocm)
-    # enable_language(CXX)
     
     find_package(HIP QUIET)
     if(HIP_FOUND)
@@ -57,58 +53,19 @@ if( HAVE_CLOUDSC_CUDA )
     endif()
     find_package(hip REQUIRED)
 
-    # set(CMAKE_C_COMPILER "/home/nams/opt/rocm/hip/bin/hipcc")
-    set(CMAKE_CXX_COMPILER "/home/nams/opt/rocm/hip/bin/hipcc")
-    # set(CMAKE_CXX_LINKER "/home/nams/opt/rocm/hip/bin/hipcc")
-    set(CMAKE_HIPCXX_FLAGS ${CMAKE_HIPCXX_FLAGS} -DHIP_PLATFORM=nvcc -DHAVE_HIP )
+    set(CMAKE_C_COMPILER "/cfs/klemming/root/rocm/opt/rocm-5.3.3/bin/hipcc")
+    set(CMAKE_CXX_COMPILER "/cfs/klemming/root/rocm/opt/rocm-5.3.3/bin/hipcc")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
+    set(CMAKE_CXX_LINKER "/cfs/klemming/root/rocm/opt/rocm-5.3.3/bin/hipcc")
+    set(CMAKE_HIPCXX_FLAGS ${CMAKE_HIPCXX_FLAGS} -DHIP_PLATFORM=amd -DHAVE_HIP -DHIP_FAST_MATH -O3 --offload-arch=gfx90a )
 
-    #if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    #  set(CMAKE_SHARED_LIBRARY_CREATE_CXX_FLAGS "${CMAKE_SHARED_LIBRARY_CREATE_CXX_FLAGS} -undefined dynamic_lookup")
-    #endif()
-
-    #set_source_files_properties(
-    #	    cloudsc/yoecldp_c.h
-    #        cloudsc/load_state.h
-    #        cloudsc/load_state.cpp
-    #        cloudsc/cloudsc_c.h
-    #        cloudsc/cloudsc_c.cpp
-    #        cloudsc/cloudsc_driver.h
-    #        cloudsc/cloudsc_driver.cpp
-    #        cloudsc/cloudsc_validate.h
-    #        cloudsc/cloudsc_validate.cpp
-    #        cloudsc/mycpu.h
-    #        cloudsc/mycpu.cpp 
-    #	    PROPERTIES HIP_SOURCE_PROPERTY_FORMAT 1)
-
-    ###### SCC-CUDA ####
-    #ecbuild_add_library(
-    #    TARGET dwarf-cloudsc-hip-lib
-    #	INSTALL_HEADERS LISTED
-    #    SOURCES
-    #	    cloudsc/yoecldp_c.h
-    #	    cloudsc/load_state.h
-    #        cloudsc/load_state.cpp
-    #        cloudsc/cloudsc_c.h
-    #        cloudsc/cloudsc_c.cpp
-    #        cloudsc/cloudsc_driver.h
-    #        cloudsc/cloudsc_driver.cpp
-    #        cloudsc/cloudsc_validate.h
-    #        cloudsc/cloudsc_validate.cpp
-    #        cloudsc/mycpu.h
-    #        cloudsc/mycpu.cpp
-    #    PUBLIC_INCLUDES
-    #        $<INSTALL_INTERFACE:include>
-    #        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>
-    #    PUBLIC_LIBS
-    #	    # hip::device
-    #        Serialbox::Serialbox_C
-    #        $<${HAVE_OMP}:OpenMP::OpenMP_C>
-    #)
-
-    hip_add_library(
-        dwarf-cloudsc-hip-lib
-            cloudsc/yoecldp_c.h
-            cloudsc/load_state.h
+    ###### SCC-HIP ####
+    ecbuild_add_library(
+        TARGET dwarf-cloudsc-hip-lib
+    	INSTALL_HEADERS LISTED
+        SOURCES
+    	    cloudsc/yoecldp_c.h
+    	    cloudsc/load_state.h
             cloudsc/load_state.cpp
             cloudsc/cloudsc_c.h
             cloudsc/cloudsc_c.cpp
@@ -118,32 +75,106 @@ if( HAVE_CLOUDSC_CUDA )
             cloudsc/cloudsc_validate.cpp
             cloudsc/mycpu.h
             cloudsc/mycpu.cpp
-	    )
+        PUBLIC_INCLUDES
+            $<INSTALL_INTERFACE:include>
+            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>
+        PUBLIC_LIBS
+    	    hip::device
+            Serialbox::Serialbox_C
+            $<${HAVE_OMP}:OpenMP::OpenMP_C>
+    )
 
     target_include_directories(dwarf-cloudsc-hip-lib PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>)
     target_link_libraries(dwarf-cloudsc-hip-lib PUBLIC hip::device Serialbox::Serialbox_C $<${HAVE_OMP}:OpenMP::OpenMP_C>)
 
-    #set_target_properties(hip::device PROPERTIES INTERFACE_COMPILE_OPTIONS "")
-    #set_target_properties(hip::device PROPERTIES INTERFACE_LINK_LIBRARIES "hip::host")
-
-    #target_link_libraries(dwarf-cloudsc-hip-lib -fopenmp -ldl -L/usr/local/apps/nvidia/22.1/Linux_x86_64/22.1/compilers/lib -L/usr/local/apps/nvidia/22.1/Linux_x86_64/22.1/cuda/lib64 -lpthread -lcudadevrt -lcudart_static -lrt -ldl -lcudart)
-
-    #target_compile_options(dwarf-cloudsc-hip-lib PRIVATE $<$<COMPILE_LANGUAGE:HIP>:
-    #                   -gencode arch=compute_80,code=sm_80
-    #                   >)
-
-    target_include_directories(dwarf-cloudsc-hip-lib PUBLIC "/usr/local/apps/nvidia/22.1/Linux_x86_64/22.1/cuda/include")
-    # set_target_properties( dwarf-cloudsc-cuda-lib PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+    target_compile_options(dwarf-cloudsc-hip-lib PRIVATE --offload-arch=gfx90a)
     
     ecbuild_add_executable(
         TARGET  dwarf-cloudsc-hip
         SOURCES dwarf_cloudsc.cpp
         LIBS dwarf-cloudsc-hip-lib
     )
-    # target_link_libraries(square hip::host)
-    # target_compile_options(dwarf-cloudsc-hip PRIVATE --unresolved-symbols=ignore-in-object-files)
-    # target_link_libraries(dwarf-cloudsc-hip dwarf-cloudsc-hip-lib -fopenmp -ldl -L/usr/local/apps/nvidia/22.1/Linux_x86_64/22.1/compilers/lib -L/usr/local/apps/nvidia/22.1/Linux_x86_64/22.1/cuda/lib64 -lpthread -lcudadevrt -lcudart_static -lrt -ldl -lcudart)
 
+    ## 
+
+    ###### SCC-HOIST-HIP ####
+    ecbuild_add_library(
+        TARGET dwarf-cloudsc-hip-hoist-lib
+    	INSTALL_HEADERS LISTED
+        SOURCES
+    	    cloudsc/yoecldp_c.h
+    	    cloudsc/load_state.h
+            cloudsc/load_state.cpp
+            cloudsc/cloudsc_c_hoist.h
+            cloudsc/cloudsc_c_hoist.cpp
+            cloudsc/cloudsc_driver_hoist.h
+            cloudsc/cloudsc_driver_hoist.cpp
+            cloudsc/cloudsc_validate.h
+            cloudsc/cloudsc_validate.cpp
+            cloudsc/mycpu.h
+            cloudsc/mycpu.cpp
+        PUBLIC_INCLUDES
+            $<INSTALL_INTERFACE:include>
+            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>
+        PUBLIC_LIBS
+    	    hip::device
+            Serialbox::Serialbox_C
+            $<${HAVE_OMP}:OpenMP::OpenMP_C>
+    )
+
+    target_include_directories(dwarf-cloudsc-hip-hoist-lib PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>)
+    target_link_libraries(dwarf-cloudsc-hip-hoist-lib PUBLIC hip::device Serialbox::Serialbox_C $<${HAVE_OMP}:OpenMP::OpenMP_C>)
+
+    target_compile_options(dwarf-cloudsc-hip-hoist-lib PRIVATE --offload-arch=gfx90a)
+    
+    ecbuild_add_executable(
+        TARGET  dwarf-cloudsc-hip-hoist
+        SOURCES dwarf_cloudsc.cpp
+        LIBS dwarf-cloudsc-hip-hoist-lib
+    )
+
+    ## 
+
+    ###### SCC-K-CACHING-HIP ####
+    ecbuild_add_library(
+        TARGET dwarf-cloudsc-hip-k-caching-lib
+    	INSTALL_HEADERS LISTED
+        SOURCES
+    	    cloudsc/yoecldp_c.h
+    	    cloudsc/load_state.h
+            cloudsc/load_state.cpp
+            cloudsc/cloudsc_c_k_caching.h
+            cloudsc/cloudsc_c_k_caching.cpp
+            cloudsc/cloudsc_driver.h
+            cloudsc/cloudsc_driver.cpp
+            cloudsc/cloudsc_validate.h
+            cloudsc/cloudsc_validate.cpp
+            cloudsc/mycpu.h
+            cloudsc/mycpu.cpp
+        PUBLIC_INCLUDES
+            $<INSTALL_INTERFACE:include>
+            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>
+        PUBLIC_LIBS
+    	    hip::device
+            Serialbox::Serialbox_C
+            $<${HAVE_OMP}:OpenMP::OpenMP_C>
+    )
+
+    target_include_directories(dwarf-cloudsc-hip-k-caching-lib PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc>)
+    target_link_libraries(dwarf-cloudsc-hip-k-caching-lib PUBLIC hip::device Serialbox::Serialbox_C $<${HAVE_OMP}:OpenMP::OpenMP_C>)
+
+    target_compile_options(dwarf-cloudsc-hip-k-caching-lib PRIVATE --offload-arch=gfx90a)
+    
+    ecbuild_add_executable(
+        TARGET  dwarf-cloudsc-hip-k-caching
+        SOURCES dwarf_cloudsc.cpp
+        LIBS dwarf-cloudsc-hip-k-caching-lib
+    )
+
+    ## 
+
+    
+    
     # Create symlink for the input data
     execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
         ${CMAKE_CURRENT_SOURCE_DIR}/../../data ${CMAKE_CURRENT_BINARY_DIR}/../../../data )
@@ -164,7 +195,6 @@ if( HAVE_CLOUDSC_CUDA )
         CONDITION HAVE_OMP
     )
 
-else()
-    ecbuild_info( "Serialbox not found, disabling C prototype" )
+#else()
+#    ecbuild_info( "Serialbox not found, disabling C prototype" )
 endif()
-
