--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,11 +6,11 @@
 # granted to it by virtue of its status as an intergovernmental organisation
 # nor does it submit to any jurisdiction.
 
-add_subdirectory(prototype1)
-add_subdirectory(common)
-add_subdirectory(cloudsc_fortran)
-add_subdirectory(cloudsc_c)
-add_subdirectory(cloudsc_sycl_dpcpp)
+#add_subdirectory(prototype1)
+#add_subdirectory(common)
+#add_subdirectory(cloudsc_fortran)
+#add_subdirectory(cloudsc_c)
+#add_subdirectory(cloudsc_sycl_dpcpp)
 add_subdirectory(cloudsc_sycl)
-add_subdirectory(cloudsc_gpu)
-add_subdirectory(cloudsc_loki)
+#add_subdirectory(cloudsc_gpu)
+#add_subdirectory(cloudsc_loki)
