PyIface: Clean up cloudsc_data utility modules
Remove redundant use of itemgetter, switch to keyword-args call
signatures, etc.

--- a/src/cloudsc_pyiface/pyproject.toml
+++ b/src/cloudsc_pyiface/pyproject.toml
@@ -23,10 +23,10 @@ classifiers = [
    " Topic :: Scientific/Engineering :: Atmospheric Science "
 ]
 dependencies = [
+    "numpy",
     "f90wrap",
     "click",
     "h5py",
-    "sorcery",
 ]
 
 [project.urls]
