--- a/src/cloudsc_pyiface/pyproject.toml
+++ b/src/cloudsc_pyiface/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 description = "Python driver that enables execution of the Fortran CLOUDSC dwarf from Python"
 readme = "README.md"
 requires-python = ">=3.8"
-license = { file = "../../LICENSE"}
+license = {file = "LICENSE"}
 classifiers = [
    " Development Status :: 3 - Alpha ",
    " Intended Audience:: Science / Research ",
